# compiler-framework-demo

./: ARCHITECTURE.md  Cargo.toml
common-framework/: Cargo.toml  README.md
common-framework/src/: checkpoint.rs  lib.rs  position.rs  streaming.rs  text_slice.rs
examples/: basic.rs
examples/markdown-renderer/: Cargo.toml  README.md
examples/markdown-renderer/examples/: interactive_editor.rs  live_terminal.rs
examples/markdown-renderer/src/: ast.rs  lexer_rules.rs  lib.rs  parser_rules.rs  renderer.rs  state.rs  token.rs
examples/pipeline-demo/: Cargo.toml
examples/pipeline-demo/src/: main.rs
lexer-example/: Cargo.toml
lexer-framework/: Cargo.toml  TEST_COVERAGE.md
lexer-framework/benches/: batch_bench.rs  context_compare.rs  streaming_vs_default.rs
lexer-framework/examples/: calc_lexer.rs  json_lexer.rs
lexer-framework/src/: context.rs  cursor.rs  lexer.rs  lib.rs  streaming.rs  traits.rs
lexer-framework/tests/: context_test.rs  cursor_test.rs  edge_cases_test.rs  error_handling_test.rs  integration_test.rs  lexer_test.rs  position_test.rs  quick_check_test.rs  size_hint_test.rs  traits_test.rs
parser-example/: Cargo.toml  README.md
parser-framework/: Cargo.toml  README.md
parser-framework/benches/: batch_bench.rs
parser-framework/examples/: simple_parser.rs
parser-framework/src/: context.rs  lazy_context.rs  lib.rs  parser.rs  position.rs  pratt.rs  streaming.rs  traits.rs
pipeline-core/: Cargo.toml  README.md
pipeline-core/benches/: pipeline_bench.rs
pipeline-core/src/: lib.rs
src/: lexer.rs  lib.rs
src/lexer/: context.rs  rules.rs  traits.rs
