[package]
name = "lexer-framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "lexer_framework"
path = "src/lib.rs"

[[example]]
name = "calc_lexer"
path = "examples/calc_lexer.rs"

[[example]]
name = "json_lexer"
path = "examples/json_lexer.rs"

[[bench]]
name = "batch_bench"
harness = false

[features]
default = []
streaming = []

[dependencies]
common-framework = { path = "../common-framework" }

[dev-dependencies]
criterion = "0.5"
