[package]
name = "parser-framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "parser_framework"
path = "src/lib.rs"

[[example]]
name = "simple_parser"
path = "examples/simple_parser.rs"

[features]
default = []
streaming = []

[dependencies]
common-framework = { path = "../common-framework" }

